[gd_scene load_steps=6 format=3 uid="uid://djlbbj13f8r4n"]

[ext_resource type="Texture2D" uid="uid://bise8vh2gqk4v" path="res://Assets/32 Free Weapon Icons/32 Free Weapon Icons/Icons/Iicon_32_39.png" id="1_u2ekq"]
[ext_resource type="Script" path="res://Scripts/pick_up_weapon_function.gd" id="1_ylx05"]
[ext_resource type="PackedScene" uid="uid://dk0cl3jsdkbrf" path="res://Scenes/melee_equipment_banner.tscn" id="3_ukqoa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1d01w"]
size = Vector2(64.5, 13)

[sub_resource type="CircleShape2D" id="CircleShape2D_yhd40"]
radius = 30.2324

[node name="dull_sword" type="RigidBody2D" node_paths=PackedStringArray("sword_icon", "banner")]
texture_filter = 1
position = Vector2(-2, 0)
collision_layer = 8
collision_mask = 8
script = ExtResource("1_ylx05")
sword_icon = NodePath("sword_sprt")
banner = NodePath("melee_equipment_banner")

[node name="sword_sprt" type="Sprite2D" parent="."]
rotation = 3.14159
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_u2ekq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.75, 23)
shape = SubResource("RectangleShape2D_1d01w")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(1.75, 23)
shape = SubResource("RectangleShape2D_1d01w")

[node name="drop_area_2d" type="Area2D" parent="." groups=["weapon_instance_area"]]
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="drop_area_2d"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_yhd40")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 31)

[node name="melee_equipment_banner" parent="." instance=ExtResource("3_ukqoa")]
visible = false
z_index = 150
position = Vector2(0, -107)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="drop_area_2d" to="." method="_on_drop_area_2d_body_entered"]
